src/objects/Agreement_Provider_Locations__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Provider_Location__r.CM_SPL_Addr_Line_1__c  &amp;  
Provider_Location__r.CM_SPL_Add_Line_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Provider_Location_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Provider Locations</relationshipLabel>
        <relationshipName>Agreement_Provider_Locations_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Provider Locations</relationshipLabel>
        <relationshipName>Agreement_Provider_Locations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_Address__c</fullName>
        <label>Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Facility_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Provider Locations (Facility Name)</relationshipLabel>
        <relationshipName>Facility_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_Medicaid_Number__c</fullName>
        <formula>CLM_Medicaid_Provider__r.CM_Issu_Ident_Nmbr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLM Medicaid Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Medicaid_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CLM Medicaid Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Agreement_Provider_Location_Account__c</field>
                <operation>equals</operation>
                <valueField>CM_Provider_Identification__c.CM_PI_Prov__c</valueField>
            </filterItems>
            <filterItems>
                <field>CM_Provider_Identification__c.CM_Prvdr_Iden_Typ_Cd__c</field>
                <operation>equals</operation>
                <value>Govt. ID</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CM_Provider_Identification__c</referenceTo>
        <relationshipLabel>Agreement Provider Locations (CLM Medicaid Provider)</relationshipLabel>
        <relationshipName>Agreement_Provider_Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_Medicare_Number__c</fullName>
        <formula>CLM_Medicare_Provider__r.CM_Issu_Ident_Nmbr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLM Medicare Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Medicare_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CLM Medicare Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Agreement_Provider_Location_Account__c</field>
                <operation>equals</operation>
                <valueField>CM_Provider_Identification__c.CM_PI_Prov__c</valueField>
            </filterItems>
            <filterItems>
                <field>CM_Provider_Identification__c.CM_Prvdr_Iden_Typ_Cd__c</field>
                <operation>equals</operation>
                <value>Medicare</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CM_Provider_Identification__c</referenceTo>
        <relationshipLabel>Agreement Provider Locations (CLM Medicare Provider)</relationshipLabel>
        <relationshipName>Agreement_Provider_Locations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_NPI_Number__c</fullName>
        <formula>CLM_NPI_Provider__r.CM_Issu_Ident_Nmbr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLM NPI Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_NPI_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CLM NPI Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Agreement_Provider_Location_Account__c</field>
                <operation>equals</operation>
                <valueField>CM_Provider_Identification__c.CM_PI_Prov__c</valueField>
            </filterItems>
            <filterItems>
                <field>CM_Provider_Identification__c.CM_Prvdr_Iden_Typ_Cd__c</field>
                <operation>equals</operation>
                <value>NPI</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CM_Provider_Identification__c</referenceTo>
        <relationshipLabel>Agreement Provider Locations (CLM NPI Provider)</relationshipLabel>
        <relationshipName>Agreement_Provider_Locations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_Provider_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Provider Locations (Provider Name)</relationshipLabel>
        <relationshipName>Provider_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_Provider_Number_PFIN__c</fullName>
        <label>Provider Number(PFIN)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_SPA_Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_SPL_Addr_Type__c</fullName>
        <label>Address Usage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Capitation</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Directory</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Credentialing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_SPL_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_SPL_Medicaid_Provider_Number__c</fullName>
        <label>Medicaid Provider Number</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_SPL_Medicare_Number__c</fullName>
        <label>Medicare Number</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_SPL_NPI_Number__c</fullName>
        <label>NPI Number</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_SPL_PFIN_No__c</fullName>
        <label>PFIN Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_SPL_Zip_CD__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Service_Payee_Location_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service &amp; Payee Location Address</label>
        <referenceTo>CM_SPL_Addr__c</referenceTo>
        <relationshipLabel>Agreement Provider Locations (Service &amp; Payee Location Address)</relationshipLabel>
        <relationshipName>Service_Payee_Loc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_Service_Type__c</fullName>
        <label>Service Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_Vistar_Number__c</fullName>
        <label>Vistar Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Provider_Location__r.CM_SPL_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Identification_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Identification - New</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CM_Provider_Identification__c.CM_PI_Prov__c</field>
                <operation>equals</operation>
                <valueField>$Source.Agreement_Provider_Location_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CM_Provider_Identification__c</referenceTo>
        <relationshipLabel>Agreement Provider Locations (Provider Identification - New)</relationshipLabel>
        <relationshipName>Agreement_Provider_Locations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Identification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Identification</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Agreement_Provider_Location_Account__c</field>
                <operation>equals</operation>
                <valueField>CM_Provider_Identification__c.CM_PI_Prov__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CM_Provider_Identification__c</referenceTo>
        <relationshipLabel>Agreement Provider Locations</relationshipLabel>
        <relationshipName>Agreement_Provider_Locations_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Provider Location from Service &amp; Payee Location where Address usage type = &apos;Billing&apos;</description>
        <inlineHelpText>Please choose the Location from the Service &amp; Payee Location for Billing Address</inlineHelpText>
        <label>Provider Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Agreement_Provider_Location_Account__c</field>
                <operation>equals</operation>
                <valueField>CM_SPL_Addr__c.CM_SPL_Prov__c</valueField>
            </filterItems>
            <filterItems>
                <field>CM_SPL_Addr__c.CM_SPL_Addr_Type__c</field>
                <operation>equals</operation>
                <value>Service, Billing</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CM_SPL_Addr__c</referenceTo>
        <relationshipLabel>Agreement Provider Locations (Provider Location)</relationshipLabel>
        <relationshipName>Agreement_Provider_Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Location_from_Identifiation__c</fullName>
        <formula>Provider_Identification__r.CM_PI_Prov__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Name from Identifiation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Tax_ID__c</fullName>
        <formula>Provider_Tax_Identification__r.CM_PTI_Tax_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Tax_Identification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Tax Identification</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Agreement_Provider_Location_Account__c</field>
                <operation>equals</operation>
                <valueField>CM_Provider_Tax_Id__c.CM_PTI_Prov_Name_From__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CM_Provider_Tax_Id__c</referenceTo>
        <relationshipLabel>Agreement Provider Locations</relationshipLabel>
        <relationshipName>Agreement_Provider_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(Provider_Location__r.CM_SPL_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Provider_Location__r.CM_SPL_Zip_CD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Agreement Provider Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Agreement__c</columns>
        <columns>Agreement_Provider_Location_Account__c</columns>
        <columns>Provider_Identification__c</columns>
        <columns>Provider_Location__c</columns>
        <columns>Provider_Tax_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APL-{00000}</displayFormat>
        <label>Agreement Provider Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Provider Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>